language_tests/source_files/invalid/pointer_const_copyto_requires_mut_dst.tr
func main() {
    let s = "abc"
    let src: *const uint8 = std.string.stringData(s)
    let dst: *const uint8 = std.string.stringData(s)
    src.copyTo(dst, 1)
}
